1. Optimize conversions for readStringArray. 2. Change conversions to use valueOf method. 3. Add test for converting String array.
PiperOrigin-RevId: 233077693